--- a/css/style.css
+++ b/css/style.css
@@ -265,3 +265,9 @@ Version: 1.0
     footer {
       text-transform: uppercase;
     }
+
+    /* 3. Tags settings */
+    img {
+      max-width: 100%;
+      height: auto;
+    }
