--- a/css/style.css
+++ b/css/style.css
@@ -122,16 +122,16 @@ Version: 1.0
     font-weight: normal;
     font-variant: normal;
     text-transform: none;
-    line-height: 1;
-  
+    
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-
+  
   [class^="icon-font-"]::before, [class*=" icon-font-"]::before,
   [class^="icon-font-"]::after, [class*=" icon-font-"]::after {
     font-family: 'Udigital-icon-font' !important;
+    line-height: 1;
   }
   
   .icon-font-bag:before {
@@ -245,7 +245,9 @@ Version: 1.0
     .shopping-cart__price,
     .item__price--old,
     .tab,
-    .news__title {
+    .news__title,
+    .header-bottom__total-price,
+    .shoping-cart-popup::after {
       font-weight: 700;
     }
 
@@ -263,7 +265,8 @@ Version: 1.0
     .item__category,
     .item__title,
     .promo__sale,
-    footer {
+    footer,
+    .header-bottom__total-price {
       text-transform: uppercase;
     }
 
@@ -372,198 +375,270 @@ Version: 1.0
     /* 6.1.2. Header-bottom */
       /* Wishlist and shopping cart popups */
       /* Main styles */
-    .shoping-cart,
-    .vish-list {      
-      position: absolute;
-      right: 0;
-      width: 400px;
-      margin-left: auto;
-      padding: 0 1.5rem 0.5rem;
-      color: #222222;
-      background-color: #ffffff;
-      border: 1px solid #e1e1e1;
-      transition: .3s ease;
-      z-index: 3;
-    } 
-  
-    .shoping-cart a,
-    .vish-list a {
-      text-decoration: none;
-      transition: .2s ease;
-    }
-  
-    .vish-list__header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.5em 0.7em;
-      text-transform: uppercase;
-    }
-  
-    .shopping-cart__title,    
-    .vish-list__title {
-      font-size: 1.1rem;
-      font-weight: 900;
-    }
-  
-    .shopping-cart__item-list,
-    .vish-list__item-list {
-      padding: 10px 0;
-      border-top: none;
-      border-bottom: 1px solid #eaeaea;
-      max-height: 40vh;
-      overflow-y: auto;
-    }
-  
-    .shopping-cart__item-list::-webkit-scrollbar,
-    .vish-list__item-list::-webkit-scrollbar {
-      -webkit-appearance: none;
-      width: 3px;
-    }
-  
-    .shopping-cart__item-list::-webkit-scrollbar-track,
-    .vish-list__item-list::-webkit-scrollbar-track {
-      background-color: #e1e1e1;
-      border-radius: 50px;
-      box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+      .shoping-cart,
+      .vish-list {      
+        position: absolute;
+        top: 100%;
+        width: 400px;
+        margin-left: auto;
+        padding: 0 1.5rem 0.5rem;
+        color: #222222;
+        background-color: #ffffff;
+        border: 1px solid #e1e1e1;
+        transition: .3s ease;
+        z-index: 3;
+      } 
+    
+      .shoping-cart a,
+      .vish-list a {
+        text-decoration: none;
+        transition: .2s ease;
+      }
+    
+      .vish-list__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5em 0.7em;
+        text-transform: uppercase;
+      }
+    
+      .shopping-cart__title,    
+      .vish-list__title {
+        font-size: 1.1rem;
+        font-weight: 900;
+      }
+    
+      .shopping-cart__item-list,
+      .vish-list__item-list {
+        padding: 10px 0;
+        border-top: none;
+        border-bottom: 1px solid #eaeaea;
+        max-height: 40vh;
+        overflow-y: auto;
+      }
+    
+      .shopping-cart__item-list::-webkit-scrollbar,
+      .vish-list__item-list::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 3px;
+      }
+    
+      .shopping-cart__item-list::-webkit-scrollbar-track,
+      .vish-list__item-list::-webkit-scrollbar-track {
+        background-color: #e1e1e1;
+        border-radius: 50px;
+        box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+      }
+      
+      .shopping-cart__item-list::-webkit-scrollbar-thumb,
+      .vish-list__item-list::-webkit-scrollbar-thumb {
+        background-color: #000000;
+      }
+    
+      .shopping-cart__item,    
+      .vish-list__item {
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding: 1.5em 3em 1.5em 1.5em;
+      }
+    
+      .shopping-cart__item-image,
+      .vish-list__item-image {
+        float: left;
+        margin: 0 0.5em;
+      }
+    
+      .shopping-cart__item-description,
+      .vish-list__item-description {
+        text-align: left;
+        margin-left: 1em;
+        font-size: 1rem;
+      }
+    
+      .shopping-cart__item-name,
+      .vish-list__item-name {
+        display: block;
+        margin-bottom: 0.5rem;
+        color: inherit;
+      }
+    
+      .shopping-cart__item-delete-btn,
+      .vish-list__item-delete-btn {
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        cursor: pointer;
+      }
+    
+      .shopping-cart__footer,    
+      .vish-list__footer {
+        padding: 5px 10px;
+        text-align: center;      
+      }
+    
+      .shopping-cart__checkout-button,
+      .vish-list__vish-list-button {
+        color: #ffffff;
+        background-color: #43a047;
+      }
+      
+      .shopping-cart__btn,
+      .vish-list__btn {
+        display: block;
+        margin: 5px 0;
+        padding: 0.6rem;
+        font-weight: 400;
+        font-size: 0.8rem;
+        transition: .2s ease;
+        cursor: pointer;
+        text-transform: uppercase;
+      }
+
+      .shopping-cart__item-quantity {
+        color: #737373;
+        font-size: 0.9rem;
+      }
+
+      .shopping-cart__item-quantity::after {
+        content: 'x';
+        margin-left: 0.2rem;      
+      }
+
+      .shopping-cart__item-price {
+        color: #737373;
+      }
+
+      .shopping-cart__total-price {
+        display: flex;
+        justify-content: space-between;
+        padding: 1em 0;
+      }
+
+      .shopping-cart__total-quantity {
+        font-size: 1rem;
+      }
+
+      .shopping-cart__subtotal-price {
+        font-size: 1rem;
+      }
+    
+      /* Hover effects */
+      .shopping-cart__item-name:hover,
+      .vish-list__item-name:hover,
+      .shopping-cart__item-name:focus,
+      .vish-list__item-name:focus {
+        text-decoration: underline;
+      }
+    
+      .shopping-cart__checkout-button:hover,
+      .vish-list__vish-list-button:hover,
+      .shopping-cart__checkout-button:focus,
+      .vish-list__vish-list-button:focus {
+        background-color: #000000;
+      }
+    
+      .shopping-cart__btn:hover,
+      .shopping-cart__btn:focus,
+      .vish-list__btn:hover,
+      .vish-list__btn:focus {
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+      }
+    
+      .header__middle .user-links__icon:focus, 
+      .header__middle .vish-list__btn:focus,
+      .header__middle .shopping-cart__btn:focus {
+        text-decoration: none;
+      }
+
+      /* Mechanism of opening and closing */
+      .shoping-cart,
+      .vish-list {
+        visibility: hidden;
+        opacity: 0;
+      }
+
+      .vish-list-popup:hover ~ .vish-list,
+      .vish-list-popup:focus ~ .vish-list,
+      .vish-list:hover,
+      .vish-list:focus-within,
+      .shoping-cart-popup:hover ~ .shoping-cart,
+      .shoping-cart-popup:focus ~ .shoping-cart,  
+      .shoping-cart:hover,
+      .shoping-cart:focus-within {
+        visibility: visible !important;
+        opacity: 1 !important;
+      }
+      /* End styles for wishlist and shopping popups */
+    
+    .search__input,
+    .search__select {
+      border-radius: 0;
+      font-size: 0.75rem;
+      color: #a9a9a9;
     }
     
-    .shopping-cart__item-list::-webkit-scrollbar-thumb,
-    .vish-list__item-list::-webkit-scrollbar-thumb {
-      background-color: #000000;
+    .search__input:focus,
+    .search__select:focus {
+      box-shadow: none;
     }
-  
-    .shopping-cart__item,    
-    .vish-list__item {
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding: 1.5em 3em 1.5em 1.5em;
+    
+    .search__input {
+      padding: 1.5rem 1rem;
     }
-  
-    .shopping-cart__item-image,
-    .vish-list__item-image {
-      float: left;
-      margin: 0 0.5em;
+
+    .search__select {
+      height: auto;
     }
-  
-    .shopping-cart__item-description,
-    .vish-list__item-description {
-      text-align: left;
-      margin-left: 1em;
-      font-size: 1rem;
+
+    .search__select [value] {
+      font-size: 16px;
     }
-  
-    .shopping-cart__item-name,
-    .vish-list__item-name {
-      display: block;
-      margin-bottom: 0.5rem;
-      color: inherit;
-    }
-  
-    .shopping-cart__item-delete-btn,
-    .vish-list__item-delete-btn {
-      position: absolute;
-      top: 20%;
-      right: 5%;
-      cursor: pointer;
-    }
-  
-    .shopping-cart__footer,    
-    .vish-list__footer {
-      padding: 5px 10px;
-      text-align: center;      
-    }
-  
-    .shopping-cart__checkout-button,
-    .vish-list__vish-list-button {
+
+    .search__button,
+    .search__button:hover {
+      background-color: #262525;
       color: #ffffff;
-      background-color: #43a047;
-    }
-    
-    .shopping-cart__btn,
-    .vish-list__btn {
-      display: block;
-      margin: 5px 0;
-      padding: 0.6rem;
-      font-weight: 400;
-      font-size: 0.8rem;
-      transition: .2s ease;
-      cursor: pointer;
-      text-transform: uppercase;
+      border-radius: 0;
+      padding: 0.7rem 1rem;
     }
 
-    .shopping-cart__item-quantity {
-      color: #737373;
-      font-size: 0.9rem;
+    .header-bottom__icons-list {
+      position: relative;
     }
 
-    .shopping-cart__item-quantity::after {
-      content: 'x';
-      margin-left: 0.2rem;      
+    .header-bottom__icon-item {
+      margin-left: 1.5rem;
+      margin-right: 1.5rem;
+      font-size: 1.375rem;
     }
 
-    .shopping-cart__item-price {
-      color: #737373;
-    }
-
-    .shopping-cart__total-price {
-      display: flex;
-      justify-content: space-between;
-      padding: 1em 0;
-    }
-
-    .shopping-cart__total-quantity {
-      font-size: 1rem;
-    }
-
-    .shopping-cart__subtotal-price {
-      font-size: 1rem;
-    }
-  
-    /* Hover effects */
-    .shopping-cart__item-name:hover,
-    .vish-list__item-name:hover,
-    .shopping-cart__item-name:focus,
-    .vish-list__item-name:focus {
-      text-decoration: underline;
-    }
-  
-    .shopping-cart__checkout-button:hover,
-    .vish-list__vish-list-button:hover,
-    .shopping-cart__checkout-button:focus,
-    .vish-list__vish-list-button:focus {
-      background-color: #000000;
-    }
-  
-    .shopping-cart__btn:hover,
-    .shopping-cart__btn:focus,
-    .vish-list__btn:hover,
-    .vish-list__btn:focus {
-      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-    }
-  
-    .header__middle .user-links__icon:focus, 
-    .header__middle .vish-list__btn:focus,
-    .header__middle .shopping-cart__btn:focus {
+    .header-bottom__icon-item:hover {
       text-decoration: none;
     }
 
-    /* Mechanism of opening and closing */
-    .shoping-cart,
-    .vish-list {
-      visibility: hidden;
-      opacity: 0;
+    .vish-list-popup:hover::before,
+    .vish-list-popup:focus::before {
+      content: "\e900";
+      color: var(--main-blue);
     }
 
-    .vish-list-popup:hover ~ .vish-list,
-    .vish-list-popup:focus ~ .vish-list,
-    .vish-list:hover,
-    .vish-list:focus-within,
-    .shoping-cart-popup:hover ~ .shoping-cart,
-    .shoping-cart-popup:focus ~ .shoping-cart,  
-    .shoping-cart:hover,
-    .shoping-cart:focus-within {
-      visibility: visible !important;
-      opacity: 1 !important;
+    .shoping-cart-popup {
+      position: relative;
+    }
+
+    .shoping-cart-popup::after {
+      content: '5';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #ffffff;
+      font-size: 0.875rem;      
     }
