--- a/css/style.css
+++ b/css/style.css
@@ -762,6 +762,29 @@ Version: 1.0
     }
 
   /* 6.3. Categories */
+  /* .categories__item {
+    background-repeat: no-repeat;
+    background-position: 67px 200px;
+    background-size: 148%;
+    min-height: 38rem;
+  }
+  
+  .categories__item:nth-child(1) {
+    background-image: url('../img/category-1.jpg');
+  }
+
+  .categories__item:nth-child(2) {
+    background-image: url('../img/category-2.jpg');
+  }
+
+  .categories__item:nth-child(3) {
+    background-image: url('../img/category-3.jpg');
+  }
+
+  .categories__item:nth-child(4) {
+    background-image: url('../img/category-4-1.jpg');
+  } */
+  
   .categories__title {
     font-size: 1.5rem;
     letter-spacing: 0.03rem;
