--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,10 @@ Version: 1.0
     z-index: 10;
     transform: translateY(-50%);
   }
+  
+  .categories .slick-arrow::before {
+    transition: .3s ease;
+  }
 
   .categories .slick-prev {
     left: 3%;
@@ -819,9 +823,29 @@ Version: 1.0
   .categories__item {
     border-left: 1px solid var(--main-gray);  
     border-right: 1px solid var(--main-gray);
+    overflow: hidden;
   }  
   
   .categories__title {
     font-size: 1.5rem;
     letter-spacing: 0.03rem;
+  }
+
+  .categories__img {
+    transition: .3s ease .1s;
+  }
+
+  .categories__item:hover,
+  .categories__item:focus-within {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .categories__item:hover .categories__img,
+  .categories__item:focus-within .categories__img {
+    transform: scale(1.1);
+  }
+
+  .categories .slick-arrow:hover::before {
+    color: var(--main-blue);
   }
