--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ Version: 1.0
 5. Custom styles
   5.0. Custom containters (Bootstrap 4)
   5.1. Active slide in category slider (Bootstrap slider) 
-  5.2. Slick slider in categories
+  5.2. Slick slider in categories (Slick)
+  5.3. Tabs in product categories (reassignment Bootstrap 4 tabs properties)
 6. Sections of page - index.html (styles of positioning elements in each specific section in the page) (firs nesting lvl. - section of page; second nesting lvl. - blocks in said section)
   6.1. Header
     6.1.1. Header-top
@@ -403,6 +404,12 @@ Version: 1.0
   .categories .slick-next::before {
     content: "\e909";
     font-size: 2.8125rem;
+  }
+
+  /* 5.3. Tabs in product categories (reassignment Bootstrap 4 tabs properties) */
+  .prod-categories .tab-content>.active {
+    display: flex;
+    flex-wrap: wrap;
   }
 
 /* 6. Sections of page - index.html (styles of positioning elements in each specific section in the page) (firs nesting lvl. - section of page; second nesting lvl. - blocks in said section) */
@@ -899,36 +906,12 @@ Version: 1.0
         font-size: 0.75rem;  
       }
 
-      /* For mind notes */
+      .prod-categories .item__price-list {
+        line-height: 1;
+      }
 
-      .tab-content>.active {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .prod-categories .item__price-list {
-      line-height: 1;
-    }
-
-    .prod-categories__item {
-      border: 1px solid var(--main-gray);
-      padding-bottom: 1.1rem;
-      margin-left: -1px;
-    }
-
-    /* .prod-categories__item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-end;
-      padding-bottom: 2.8rem;
-    }
-
-    .item__price-list,
-    .prod-categories .item__price  {
-      line-height: 1.2;
-    }
-
-    .prod-categories__title {
-      margin-top: 1.45rem;
-    } */
+      .prod-categories__item {
+        border: 1px solid var(--main-gray);
+        padding-bottom: 1.1rem;
+        margin-left: -1px;
+      }    
